--- a/config/crd/bases/uyuni.uyuni-project.org_servers.yaml
+++ b/config/crd/bases/uyuni.uyuni-project.org_servers.yaml
@@ -38,6 +38,45 @@ spec:
           spec:
             description: ServerSpec defines the desired state of Server
             properties:
+              db:
+                description: DB defines how to access and configure the internal database.
+                properties:
+                  adminCredentialsSecret:
+                    description: AdminCredentialsSecret defines the name of the secret
+                      containing the admin credentials to use. This is only needed
+                      for an external Database. The credentials secrets are expected
+                      to container username and password items.
+                    type: string
+                  credentialsSecret:
+                    description: CredentialsSecret defines the name of the secret
+                      containing the credentials to use. The credentials secrets are
+                      expected to container username and password items.
+                    type: string
+                  host:
+                    description: "Host defines the FQDN to use to connect to, for
+                      an external database. \n This can be omitted for an external
+                      database if the corresponding service is created outside of
+                      the operator. For instance, add a service named test-db describing
+                      how to access the internal database for a server named test.
+                      Likewise a test-reportdb service would be used for the report
+                      database of a server named test."
+                    type: string
+                  name:
+                    default: uyuni
+                    description: Name defines the name of the database to connect
+                      to.
+                    type: string
+                  port:
+                    description: "Port defines the port to connect to, for an external
+                      database. \n Like Host, this can be omitted if the service is
+                      not created outside of the operator."
+                    type: integer
+                type: object
+              debug:
+                default: false
+                description: Debug defines whether the Java debug ports should be
+                  enabled and exposed. This is not recommended on a production server.
+                type: boolean
               email:
                 description: Email defines the email for the server administrator
                 maxLength: 128
@@ -52,10 +91,145 @@ spec:
                   the Uyuni server.
                 pattern: ^([a-zA-Z0-9]{1}[a-zA-Z0-9-]{0,62})(\.[a-zA-Z0-9]{1}[a-zA-Z0-9-]{0,62})*?(\.[a-zA-Z]{1}[a-zA-Z0-9]{0,62})\.?$
                 type: string
-              timezone:
+              image:
+                default: registry.opensuse.org/uyuni/server:latest
+                description: Image defines the image to use for the big server container.
                 type: string
+              ingress:
+                description: Ingress defines the name of the ingress for which to
+                  generate rules. Accepted values are nginx or traefik. If anything
+                  else if provided, no Ingress rule will be generated.
+                type: string
+              pullPolicy:
+                description: PullPolicy defines the pull policy for all images used
+                  by the server.
+                type: string
+              pullSecret:
+                description: PullSecret defines the name of the secret to use to pull
+                  the images from the registry.
+                type: string
+              reportdb:
+                description: ReportDB defines how to access and configure the report
+                  database.
+                properties:
+                  adminCredentialsSecret:
+                    description: AdminCredentialsSecret defines the name of the secret
+                      containing the admin credentials to use. This is only needed
+                      for an external Database. The credentials secrets are expected
+                      to container username and password items.
+                    type: string
+                  credentialsSecret:
+                    description: CredentialsSecret defines the name of the secret
+                      containing the credentials to use. The credentials secrets are
+                      expected to container username and password items.
+                    type: string
+                  host:
+                    description: "Host defines the FQDN to use to connect to, for
+                      an external database. \n This can be omitted for an external
+                      database if the corresponding service is created outside of
+                      the operator. For instance, add a service named test-db describing
+                      how to access the internal database for a server named test.
+                      Likewise a test-reportdb service would be used for the report
+                      database of a server named test."
+                    type: string
+                  name:
+                    default: uyuni
+                    description: Name defines the name of the database to connect
+                      to.
+                    type: string
+                  port:
+                    description: "Port defines the port to connect to, for an external
+                      database. \n Like Host, this can be omitted if the service is
+                      not created outside of the operator."
+                    type: integer
+                type: object
+              ssl:
+                description: SSL defines how to get the SSL certificates. It can be
+                  using existing TLS secrets or cert-manager issuers. If nothing is
+                  provided
+                properties:
+                  ServerSecretName:
+                    default: uyuni-server-tls
+                    description: ServerSecretName defines the name of the Secret containing
+                      the server TLS secret. The secret can either be generated by
+                      cert-manager or statically defined. The TLS secret is expected
+                      to contain the CA certificate in the ca.crt item.
+                    type: string
+                  issuerName:
+                    description: IssuerName defines the name of the cert-manager issuer
+                      to use for ingress rules. Leave empty if cert-manager is not
+                      used.
+                    type: string
+                type: object
+              timezone:
+                description: Timezone defines the time zone to set in the server containers.
+                type: string
+              volumes:
+                description: Volumes defines configuration for the server persistent
+                  volumes claims. Changing the persistent volumes claims storage class
+                  or size after the initial creation will have no effect.
+                properties:
+                  cache:
+                    description: Cache is the configuration of the var-cache volume.
+                    properties:
+                      class:
+                        description: Class is the storage class of the volume.
+                        type: string
+                      size:
+                        description: Size is the requested size of the volume using
+                          kubernetes values like '100Gi'.
+                        type: string
+                    type: object
+                  class:
+                    description: Class is the default storage class for all the persistent
+                      volume claims.
+                    type: string
+                  database:
+                    description: Database is the configuration of the var-pgsql volume.
+                    properties:
+                      class:
+                        description: Class is the storage class of the volume.
+                        type: string
+                      size:
+                        description: Size is the requested size of the volume using
+                          kubernetes values like '100Gi'.
+                        type: string
+                    type: object
+                  mirror:
+                    description: Mirror defines the name of a persistent volume claim
+                      to use as mirror by the server. The persistent volume claim
+                      is assumed to be existing, bound and populated. No mirror will
+                      be set up if omitted.
+                    type: string
+                  packages:
+                    description: Packages is the configuration of the var-spacewalk
+                      volume containing the synchronizede repositories.
+                    properties:
+                      class:
+                        description: Class is the storage class of the volume.
+                        type: string
+                      size:
+                        description: Size is the requested size of the volume using
+                          kubernetes values like '100Gi'.
+                        type: string
+                    type: object
+                  www:
+                    description: Www is the configuration of the srv-www volume containing
+                      the imags and distributions.
+                    properties:
+                      class:
+                        description: Class is the storage class of the volume.
+                        type: string
+                      size:
+                        description: Size is the requested size of the volume using
+                          kubernetes values like '100Gi'.
+                        type: string
+                    type: object
+                type: object
             required:
+            - db
             - fqdn
+            - reportdb
             type: object
           status:
             description: ServerStatus defines the observed state of Server
